# castiron

./: .gitignore  Cargo.toml  README.md  castiron_config.json  database.sqlite  feed_list.json  feed_list.txt  foo.txt  temp_db.sqlite
shows/3840/: feed.xml
src/: file_handling.rs  main.rs  networking.rs
src/file_handling/: config.rs  episodes.rs  feeds.rs  mod.rs  queue.rs  setup.rs
src/networking/: downloads.rs  feeds.rs  mod.rs
src/types/: config.rs  episodes.rs  errors.rs  feeds.rs  mod.rs  ui.rs
src/ui/: gui.rs  mod.rs  styles.rs  tui.rs  widgets.rs
src/ui/widgets/: config.rs  episode.rs  episode_list.rs  feed.rs  feed_list.rs  mod.rs  player.rs
