[package]
name = "castiron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"
bytes = "1.5.0"
rand = "0.8.5"
reqwest = "0.11.17"
roxmltree = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite = "0.36.0"
tokio = { version = "1.28.1", features = ["full"] }
